fix: correcciones en texto de SP

--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -61,7 +61,7 @@ const values = [
           </h2>
           <div class="space-y-4 text-secondary-600 text-lg leading-relaxed">
             <p>
-              La Reserva nació hace una década con una visión clara: transformar el servicio de bar en eventos de un simple "agregado" a una <strong>experiencia protagonista</strong>.
+              La Reserva nació hace hace 3 años con una visión clara: transformar el servicio de bar en eventos de un simple "agregado" a una <strong>experiencia protagonista</strong>.
             </p>
             <p>
               Entendimos que un buen cóctel tiene el poder de romper el hielo, iniciar conversaciones y crear memorias. Por eso, no solo mezclamos licores; diseñamos momentos.
